PLUGINWIZARD-114 simplify templates code to avoid duplicate code

--- a/webapp/WEB-INF/templates/generators/default/portlet/gt_portlet_jsp.html
+++ b/webapp/WEB-INF/templates/generators/default/portlet/gt_portlet_jsp.html
@@ -1,19 +1,17 @@
-  <#assign nBeginIndex = portlet.portletTypeName?last_index_of("_")><#assign portletName = portlet.portletTypeName?substring(0, nBeginIndex)?lower_case>	
+<#assign nBeginIndex = portlet.portletTypeName?last_index_of("_")><#assign portletName = portlet.portletTypeName?substring(0, nBeginIndex)?lower_case>	
 <#switch portlet_jsp_type>
  
  <#case 0>
- <#if is_Module>
-	 <%@ page errorPage="../../../../ErrorPage.jsp" %>
- <#else>
- 	 <%@ page errorPage="../../ErrorPage.jsp" %>
- 	
- </#if>
-<jsp:include page="../../PortletAdminHeader.jsp" />
+<%@ page errorPage=" <#if is_Module>../../</#if>../../ErrorPage.jsp" %>
+
+<jsp:include page="<#if is_Module>../../</#if>../../PortletAdminHeader.jsp" />
 
 <jsp:useBean id="${portlet.portletClass}" scope="session" class="fr.paris.lutece.plugins.${plugin_name}.web.portlet.${portlet.portletClass}JspBean" />
 
 <% ${portlet.portletClass}.init( request, ${portlet.portletClass}.RIGHT_MANAGE_ADMIN_SITE ); %>
 <%= ${portlet.portletClass}.getModify ( request ) %>
+
+<%@ include file="<#if is_Module>../../</#if>../../AdminFooter.jsp" %>
 
 
  <#if is_Module>
@@ -24,13 +22,9 @@
  </#if>
  <#break>
  
-  <#case 1>
- <#if is_Module>
-	 <%@ page errorPage="../../../../ErrorPage.jsp" %>
- <#else>
- 	 <%@ page errorPage="../../ErrorPage.jsp" %>
- 	
- </#if>
+<#case 1>
+<%@ page errorPage="<#if is_Module>../../</#if>../../ErrorPage.jsp" %>
+
 <jsp:useBean id="${portlet.portletClass}" scope="session" class="fr.paris.lutece.plugins.${plugin_name}.web.portlet.${portlet.portletClass}JspBean" />
 
 <%
@@ -38,40 +32,26 @@
     response.sendRedirect( ${portlet.portletClass}.doModify( request ) );
 %>
 
- <#break>
+<#break>
  
-  <#case 2>
+<#case 2>
 
- <#if is_Module>
-	 <%@ page errorPage="../../../../ErrorPage.jsp" %>
- <#else>
- 	 <%@ page errorPage="../../ErrorPage.jsp" %>
- 	
- </#if>
- <jsp:include page="../../PortletAdminHeader.jsp" />
+<%@ page errorPage="<#if is_Module>../../</#if>../../ErrorPage.jsp" %>
 
+<jsp:include page="<#if is_Module>../../</#if>../../PortletAdminHeader.jsp" />
 <jsp:useBean id="${portlet.portletClass}" scope="session" class="fr.paris.lutece.plugins.${plugin_name}.web.portlet.${portlet.portletClass}JspBean" />
 
 <% ${portlet.portletClass}.init( request, ${portlet.portletClass}.RIGHT_MANAGE_ADMIN_SITE); %>
 <%= ${portlet.portletClass}.getCreate ( request ) %>
 
- <#if is_Module>
-	<%@ include file="../../../../AdminFooter.jsp" %>
- <#else>
-	<%@ include file="../../AdminFooter.jsp" %>
- 	
- </#if>
+<%@ include file="<#if is_Module>../../</#if>../../AdminFooter.jsp" %>
 
- <#break>
+<#break>
 
-  <#case 3>
+<#case 3>
 
- <#if is_Module>
-	 <%@ page errorPage="../../../../ErrorPage.jsp" %>
- <#else>
- 	 <%@ page errorPage="../../ErrorPage.jsp" %>
- 	
- </#if>
+<%@ page errorPage="<#if is_Module>../../</#if>../../ErrorPage.jsp" %>
+
 <jsp:useBean id="${portlet.portletClass}" scope="session" class="fr.paris.lutece.plugins.${plugin_name}.web.portlet.${portlet.portletClass}JspBean" />
 
 <%
@@ -81,7 +61,7 @@
  <#break>
 
 
-  <#default>
+ <#default>
   
-  </#switch>  
+ </#switch>  
 
