--- a/webapp/WEB-INF/templates/generators/default/jsp/gt_jsp_admin_controller.html
+++ b/webapp/WEB-INF/templates/generators/default/jsp/gt_jsp_admin_controller.html
@@ -1,21 +1,9 @@
 <jsp:useBean id="${bean_name}" scope="session" class="fr.paris.lutece.plugins.${plugin_name}.web.${business_class.businessClass}JspBean" />
 <% String strContent = ${bean_name}.processController ( request , response ); %>
 
-<#if is_Module>
-
-<%@ page errorPage="../../../../ErrorPage.jsp" %>
-<jsp:include page="../../../../AdminHeader.jsp" />
+<%@ page errorPage="<#if is_Module>../../</#if>../../ErrorPage.jsp" %>
+<jsp:include page="<#if is_Module>../../</#if>../../AdminHeader.jsp" />
 
 <%= strContent %>
 
-<%@ include file="../../../../AdminFooter.jsp" %>
-
-<#else>
-
-<%@ page errorPage="../../ErrorPage.jsp" %>
-<jsp:include page="../../AdminHeader.jsp" />
-
-<%= strContent %>
-
-<%@ include file="../../AdminFooter.jsp" %>
-</#if>
+<%@ include file="<#if is_Module>../../</#if>../../AdminFooter.jsp" %>
