--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_create_plugin_description.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_create_plugin_description.html
@@ -44,6 +44,18 @@
 							</div>  
 
 							<div class="form-group">
+								<label class="col-md-3 control-label">Type :</label>            
+								<div class="col-md-9">
+									<select class="form-control" name="type">    				
+										<option value="PLUGIN">Plugin</option>
+                                                                                <option value="MODULE"
+										 <#if ( (plugin_model.type?? && plugin_model.type= 'MODULE') || plugin_model.pluginName?contains('-')) ) > selected </#if>
+                                                                                >Module</option>		
+									</select>     
+								</div>                   	
+							</div>  
+
+							<div class="form-group">
 								<label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_create_plugin_description.labelPluginDescription} : </label>
 								<div class="col-md-9">
 									 <input class="form-control" type="text" name="plugin_description" value="" />
