--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_modify_plugin_description.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_modify_plugin_description.html
@@ -35,7 +35,7 @@
 								<div class="col-md-9">
 									<select class="form-control" name="type">    				
 											<option value="PLUGIN">Plugin</option>
-										 <#if (plugin_model.type?? && plugin_model.type= 'MODULE') || plugin_model.pluginName?contains('-')>
+										 <#if ( (plugin_model.type?? && plugin_model.type= 'MODULE') || (plugin_model.pluginName?? && plugin_model.pluginName?contains('-'))  ) >
 										 	<option value="MODULE" selected>Module</option>	
 										 <#else>
 										 	<option value="MODULE">Module</option>	
