--- a/webapp/WEB-INF/templates/generators/default/html/gt_html_xpage.html
+++ b/webapp/WEB-INF/templates/generators/default/html/gt_html_xpage.html
@@ -15,7 +15,7 @@
 				
 				<#list business_class.attributes as attribute>
           <${macro}formGroup labelFor='${attribute.paramName}' labelKey='${i18n_open}${plugin_name}.create_${business_class.businessClass?lower_case}.label${attribute.name}${i18n_close}' helpKey='${i18n_open}${plugin_name}.create_${business_class.businessClass?lower_case}.label${attribute.name}.help${i18n_close}' mandatory=true>
-						<${macro}input type="text" id="${attribute.paramName}" name="${attribute.paramName}" value="${bra_open}${business_class.businessClass?lower_case}.${attribute.name?uncap_first}!''${bra_close}" <#if attribute.maxLength &gt; 0> maxlength=${attribute.maxLength}</#if> tabIndex="${attribute_index}" />
+						<${macro}input type="text" id="${attribute.paramName}" name="${attribute.paramName}" value="${bra_open}${business_class.businessClass?lower_case}.${attribute.name?uncap_first}!''${bra_close}" <#if attribute.maxLength &gt; 0> maxlength=${attribute.maxLength}</#if> tabIndex="${attribute_index + 1}" />
 					</${macro}formGroup>
 				</#list>
         <${macro}formGroup>
