PLUGINWIZARD-125 : Kotlin generation support (JspBean)

--- a/webapp/WEB-INF/templates/generators/default/xml/gt_xml_pom_file.html
+++ b/webapp/WEB-INF/templates/generators/default/xml/gt_xml_pom_file.html
@@ -4,7 +4,7 @@
     <parent>
         <artifactId>lutece-kotlin-global-pom</artifactId>
         <groupId>fr.paris.lutece.tools</groupId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>${kotlin_pom_parent_version}</version>
     </parent>
 <#else>
     <parent>
