--- a/webapp/WEB-INF/templates/generators/default/business/gt_business_test.html
+++ b/webapp/WEB-INF/templates/generators/default/business/gt_business_test.html
@@ -45,24 +45,30 @@ import fr.paris.lutece.test.LuteceTestCase;
 import java.sql.Date;
 </#if>
 
+/**
+ * This is the business class test for the object ${business_class.businessClass}
+ */
 public class ${business_class.businessClass}BusinessTest extends LuteceTestCase
 {
 <#list business_class.attributes as attribute>
 <#if attribute.type = "String"> 
-    private final static ${attribute.type} ${attribute.name?upper_case}1 = "${attribute.name}1";
-    private final static ${attribute.type} ${attribute.name?upper_case}2 = "${attribute.name}2";
+    private static final ${attribute.type} ${attribute.name?upper_case}1 = "${attribute.name}1";
+    private static final ${attribute.type} ${attribute.name?upper_case}2 = "${attribute.name}2";
 <#elseif attribute.type = "boolean">
-	private final static ${attribute.type} ${attribute.name?upper_case}1 = true;
-    private final static ${attribute.type} ${attribute.name?upper_case}2 = false;
+	private static final ${attribute.type} ${attribute.name?upper_case}1 = true;
+    private static final ${attribute.type} ${attribute.name?upper_case}2 = false;
 <#elseif attribute.type = "Date">
-	private final static ${attribute.type} ${attribute.name?upper_case}1 = new Date( 1000000l );
-    private final static ${attribute.type} ${attribute.name?upper_case}2 = new Date( 2000000l );
+	private static final ${attribute.type} ${attribute.name?upper_case}1 = new Date( 1000000l );
+    private static final ${attribute.type} ${attribute.name?upper_case}2 = new Date( 2000000l );
 <#else>
-    private final static ${attribute.type} ${attribute.name?upper_case}1 = 1;
-    private final static ${attribute.type} ${attribute.name?upper_case}2 = 2;
+    private static final ${attribute.type} ${attribute.name?upper_case}1 = 1;
+    private static final ${attribute.type} ${attribute.name?upper_case}2 = 2;
 </#if>
 </#list>
 
+	/**
+	* test ${business_class.businessClass}
+	*/
     public void testBusiness(  )
     {
         // Initialize an object
