--- a/webapp/WEB-INF/templates/generators/default/jspbean/gt_jspbean_abstract.html
+++ b/webapp/WEB-INF/templates/generators/default/jspbean/gt_jspbean_abstract.html
@@ -80,7 +80,7 @@ public abstract class Abstract${feature_name}JspBean extends MVCAdminJspBean
      * @param strManageJsp The JSP
      * @return The model
      */
-    protected Map<String, Object> getPaginatedListModel( HttpServletRequest request, String strBookmark, List list,
+    protected <T> Map<String, Object> getPaginatedListModel( HttpServletRequest request, String strBookmark, List<T> list,
         String strManageJsp )
     {
         _strCurrentPageIndex = Paginator.getPageIndex( request, Paginator.PARAMETER_PAGE_INDEX, _strCurrentPageIndex );
@@ -91,7 +91,7 @@ public abstract class Abstract${feature_name}JspBean extends MVCAdminJspBean
         String strUrl = url.getUrl(  );
 
         // PAGINATOR
-        LocalizedPaginator paginator = new LocalizedPaginator( list, _nItemsPerPage, strUrl, PARAMETER_PAGE_INDEX, _strCurrentPageIndex, getLocale(  ) );
+        LocalizedPaginator<T> paginator = new LocalizedPaginator<T>( list, _nItemsPerPage, strUrl, PARAMETER_PAGE_INDEX, _strCurrentPageIndex, getLocale(  ) );
 
         Map<String, Object> model = getModel(  );
 
