--- a/webapp/WEB-INF/templates/generators/default/rest/gt_rest_constants.html
+++ b/webapp/WEB-INF/templates/generators/default/rest/gt_rest_constants.html
@@ -66,4 +66,11 @@ public final class Constants
     public static final String ${business_class.businessClass?upper_case}_ATTRIBUTE_${attribute.paramName?upper_case} = "${attribute.paramName?lower_case}";
     </#list>
     </#list>
+    
+    /**
+     * Private constructor
+     */
+    private Constants(  )
+    {
+    }
 }
