PLUGINWIZARD-127 : creating specific generator for html v5 and add variable core version on generators

--- a/webapp/WEB-INF/templates/generators/default/xml/gt_xml_plugin_file.html
+++ b/webapp/WEB-INF/templates/generators/default/xml/gt_xml_plugin_file.html
@@ -13,7 +13,7 @@
 <plug-in>
     <name>${plugin.pluginName}</name>
     <class>${plugin.pluginClass}</class>
-    <version>${plugin.pluginVersion}</version>
+    <version>${plugin.pluginVersion}-SNAPSHOT</version>
     <documentation><#if plugin.pluginDocumentation??>${plugin.pluginDocumentation}</#if></documentation>
     <installation><#if plugin.pluginInstallation??>${plugin.pluginInstallation}</#if></installation>
     <changes><#if plugin.pluginChanges??>${plugin.pluginChanges}</#if></changes>
