--- a/webapp/WEB-INF/templates/generators/default/xml/gt_xml_pom_file.html
+++ b/webapp/WEB-INF/templates/generators/default/xml/gt_xml_pom_file.html
@@ -54,7 +54,7 @@
         <dependency>
             <groupId>fr.paris.lutece</groupId>
             <artifactId>lutece-core</artifactId>
-            <version>${pom_dependencies_core_version}</version>
+            <version>[${core_version},)</version>
             <type>lutece-core</type>
         </dependency>
         <#if plugin.getRest().getIdBusinessClasses()?? && plugin.getRest().getIdBusinessClasses()?size &gt; 0 >
