PLUGINWIZARD-131 : add JspBean and XPage test
PLUGINWIZARD-131 some corrections

PLUGINWIZARD-131 fixed kotlin generation bug in the generators list in context

--- a/webapp/WEB-INF/templates/generators/default/business/gt_business_test.html
+++ b/webapp/WEB-INF/templates/generators/default/business/gt_business_test.html
@@ -28,7 +28,7 @@
  * CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE)
  * ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
  * POSSIBILITY OF SUCH DAMAGE.
- *
+ *"
  * License 1.0
  */
 
@@ -81,7 +81,11 @@ public class ${business_class.businessClass}BusinessTest extends LuteceTestCase
         ${business_class.businessClass}Home.create( ${business_class.instanceName} );
         ${business_class.businessClass} ${business_class.instanceName}Stored = ${business_class.businessClass}Home.findByPrimaryKey( ${business_class.instanceName}.getId( ) );
         <#list business_class.attributes as attribute>
+         <#if attribute.type != "Date">
         assertEquals( ${business_class.instanceName}Stored.get${attribute.name}() , ${business_class.instanceName}.get${attribute.name}( ) );
+        <#elseif attribute.type = "Date">
+        assertEquals( ${business_class.instanceName}Stored.get${attribute.name}().toString() , ${business_class.instanceName}.get${attribute.name}( ).toString() );
+        </#if>
         </#list>
 
         // Update test
@@ -91,11 +95,15 @@ public class ${business_class.businessClass}BusinessTest extends LuteceTestCase
         ${business_class.businessClass}Home.update( ${business_class.instanceName} );
         ${business_class.instanceName}Stored = ${business_class.businessClass}Home.findByPrimaryKey( ${business_class.instanceName}.getId( ) );
         <#list business_class.attributes as attribute>
+        <#if attribute.type != "Date">
         assertEquals( ${business_class.instanceName}Stored.get${attribute.name}() , ${business_class.instanceName}.get${attribute.name}( ) );
+        <#elseif attribute.type = "Date">
+        assertEquals( ${business_class.instanceName}Stored.get${attribute.name}().toString() , ${business_class.instanceName}.get${attribute.name}( ).toString() );
+        </#if>
         </#list>
 
         // List test
-        ${business_class.businessClass}Home.get${business_class.businessClass}sList();
+        ${business_class.businessClass}Home.get${business_class.businessClass}sList( );
 
         // Delete test
         ${business_class.businessClass}Home.remove( ${business_class.instanceName}.getId( ) );
@@ -103,5 +111,8 @@ public class ${business_class.businessClass}BusinessTest extends LuteceTestCase
         assertNull( ${business_class.instanceName}Stored );
         
     }
+    
+    
+     
 
 }
